7.1.4 (Aug 30, 2022)
 - Updated composer to allow multiple `psr/log` versions.

7.1.3 (Aug 24, 2022)
 - Updated `predis` dependency to `^2.0`.

7.1.2 (May 24, 2022)
 - Updated validations to comply with PHP8's stricter type validations.

7.1.1 (March 28, 2022)
 - Removed unused logic for HTTP and requests dependency.
 - Removed all producer logic for Storages.
 - Added SafeRedisWrapper for handling exception in Redis.
 - Added `.gitattributes` for excluding `tests/.` and other files for composer package.
 - Fixed typos in `Splitter.php` and CONTRIBUTORS-GUIDE.

7.1.0 (Dec 3, 2021)
 - Added a new option to use when running Redis in cluster mode called `keyHashTags` which receives a list of hashtags from which the SDK will randomly pick one to use on the generated instance.

7.0.0 (Nov 23, 2021)
 - BREAKING CHANGE: Removed support from versions older than PHP 7.3.
 - BREAKING CHANGE: Removed SharedMemory (shmop) component for Segments.
 - PHP 8 Compatibility: made Di methods public.
 - Upgraded dependencies.

6.2.5 (Apr 27, 2021)
 - Added delimiter in SharedMemory Cache.

6.2.4 (Mar 20, 2020)
 - Added missing methods in ClientInterface.

6.2.3 (Nov 1, 2019)
 - Added flag `IPAddressesEnabled` into options to enable/disable sending MachineName and MachineIP when data is posted in headers.

6.2.2 (Sep 18, 2019)
 - Fetch multiple splits at once on getTreatments/getTreatmentsWithConfig
 - Removed MatcherClient (DependencyMatcher now uses Evaluator directly)
 - Removed shared memory.
 - Several code cleanups

6.2.1 (Jul 12, 2019)
 - Verified TLS support for redis and validated config options
 - Support newer versions of symfony/yaml

6.2.0 (May 30, 2019)
 - Added validation for TrafficType in track calls.
 - Added validation when split does not exist on treatments and manager calls.
 - Added multiple factory instantiation check.
 - Removed producer modules.
 - Added properties to track method.

6.1.0 (April 30, 2019)