@@ -30,7 +30,6 @@
 
   "require-dev": {
     "phpunit/phpunit": "^9.0.0",
-    "phpdocumentor/phpdocumentor": "3.*",
     "squizlabs/php_codesniffer": "3.*",
     "rogervila/php-sonarqube-scanner": "1.1.0"
   },
