@@ -57,7 +57,7 @@ class Logger extends LoggerTrait implements LoggerInterface
      * @param array $context
      * @return null
      */
-    public function log($level, $message, array $context = array())
+    public function log($level, $message, array $context = array()): void
     {
         if ($this->logLevels[$level] <= $this->logLevel) {
             $this->handler->write($level, $message);
