@@ -1,5 +1,7 @@
 7.1.4 (Aug 30, 2022)
- - Updated composer to allow multiple `psr/log` versions.
+ - Updated dependencies to allow `psr/log` 2 and 3.
+ - Removed `phpdocumentor/phpdocumentor` dependency.
+ - Updated `Logger` and `LoggerTrait` to be compliant with `psr/log` 3.
 
 7.1.3 (Aug 24, 2022)
  - Updated `predis` dependency to `^2.0`.
